crates/swc_ecma_parser/tests/test262-error-references/fail/d78bf1ca003a72cd.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/d78bf1ca003a72cd.js:1:4
  |
1 | 0o18
  |    ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/d78bf1ca003a72cd.js:1:1
  |
1 | 0o18
  | ^^^

